<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Categories"
    android:orientation="vertical"
    android:padding="8dp">

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="Select Your Categories."
       android:textSize="24sp"
       android:textAlignment="center"
       android:textColor="#000"
       android:textStyle=""/>
    <GridLayout
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:rowCount="4"
        android:layout_weight="8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:padding="20dp">

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="140dp"
            android:layout_height="190dp"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_margin="5dp"
            android:layout_marginRight="40dp"
            app:cardCornerRadius="4dp"
            android:background="@drawable/bg_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:scaleType="centerCrop"
                    android:background="#ccc"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/category1"
                    android:textColor="#2d2d2d"
                    android:textSize="16sp"
                    android:gravity="center"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="140dp"
            android:layout_height="190dp"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_margin="5dp"
            app:cardCornerRadius="4dp"
            android:background="@drawable/bg_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:contentDescription="Category Image."
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:scaleType="centerCrop"
                    android:background="#ccc"/>
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/category2"
                    android:textColor="#2d2d2d"
                    android:textSize="16sp"
                    android:gravity="center"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="140dp"
            android:layout_height="190dp"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_margin="5dp"
            app:cardCornerRadius="4dp"
            android:background="@drawable/bg_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:scaleType="centerCrop"
                    android:background="#ccc"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/category3"
                    android:textColor="#2d2d2d"
                    android:textSize="16sp"
                    android:gravity="center"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="140dp"
            android:layout_height="190dp"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_margin="5dp"
            app:cardCornerRadius="4dp"
            android:background="@drawable/bg_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:scaleType="centerCrop"
                    android:background="#ccc"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/category4"
                    android:textColor="#2d2d2d"
                    android:textSize="16sp"
                    android:gravity="center"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="140dp"
            android:layout_height="190dp"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_margin="5dp"
            app:cardCornerRadius="4dp"
            android:background="@drawable/bg_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:scaleType="centerCrop"
                    android:background="#ccc"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/category5"
                    android:textColor="#2d2d2d"
                    android:textSize="16sp"
                    android:gravity="center"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="140dp"
            android:layout_height="190dp"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_margin="5dp"
            app:cardCornerRadius="4dp"
            android:background="@drawable/bg_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:scaleType="centerCrop"
                    android:background="#ccc"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/category6"
                    android:textColor="#2d2d2d"
                    android:textSize="16sp"
                    android:gravity="center"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </GridLayout>

</LinearLayout>